deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-deployment
  labels:
    app: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 25m
            memory: 25Mi
        volumeMounts:
        - name: nginx-html-vol
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
      - name: nginx-html-vol
        configMap:
          name: test-app-configmap
